kcm_keyboard: Use udev device notifier when xcb-xinput is not available

XCB-XInput is not available on some distributions, use udev device discovery
there instead to reapply settings when adding new keyboard / mouse.

BUG: 346336
FIXED-IN: 5.5.0
REVIEW: 125465