kcms/keyboard/kcm_add_layout_dialog.cpp
@@ -26,6 +26,8 @@
 
 #include "ui_kcm_add_layout_dialog.h"
 
+#include <config-keyboard.h>
+
 
 AddLayoutDialog::AddLayoutDialog(const Rules* rules_, Flags* flags_, const QString& model_, bool showLabel, QWidget* parent):
 		QDialog(parent),
