kcms/keyboard/kcm_keyboard_widget.h
@@ -25,6 +25,7 @@
 #include <QTabWidget>
 #include <QLoggingCategory>
 
+#include <config-keyboard.h>
 
 Q_DECLARE_LOGGING_CATEGORY(KCM_KEYBOARD)
 
