kcms/keyboard/config-keyboard.h.cmake
@@ -1,0 +1,9 @@
+#ifndef CONFIG_KEYBOARD_H
+#define CONFIG_KEYBOARD_H
+
+#cmakedefine HAVE_XINPUT
+#cmakedefine HAVE_UDEV
+
+#cmakedefine NEW_GEOMETRY
+
+#endif // CONFIG_KEYBOARD_H
